# chat_server_v1

./: .gitignore  Cargo.toml  README.md
documents/: architecture.md  data-structures.md  error-handling.md  message-protocol.md  project-structure.md  sequence-diagrams.md
documents_kr/: architecture.md  data-structures.md  error-handling.md  message-protocol.md  project-structure.md  sequence-diagrams.md
src/: client.rs  error.rs  handler.rs  lib.rs  main.rs  message.rs  room.rs  server.rs  types.rs
