[package]
name = "chat_server_v1"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A simple 1:1 WebSocket chat server using tokio-tungstenite"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# WebSocket
tokio-tungstenite = "0.24"

# Futures utilities (StreamExt, SinkExt)
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# Random generation (for room code)
rand = "0.8"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
# Faster compilation in dev mode
opt-level = 0

[[bin]]
name = "chat_server_v1"
path = "src/main.rs"

[lib]
name = "chat_server_v1"
path = "src/lib.rs"
